Add fb blank control
增加imx6开关屏操作

--- a/01.常用command.md
+++ b/01.常用command.md
@@ -2,3 +2,9 @@
 - IMX6Q 读取CPU温度命令
 
 `cat /sys/devices/virtual/thermal/thermal_zone0/temp`
+
+- IMX6 设置开关屏显示
+```
+echo 1 > /sys/class/graphics/fb0/blank
+echo 0 > /sys/class/graphics/fb0/blank
+```
