--- a/0004.待处理的网址集合.md
+++ b/0004.待处理的网址集合.md
@@ -1,5 +1,5 @@
 
-- 1.获取usb设备类型
+- 1.获取usb设备类型(anInterface.getInterfaceClass)
 
     - [Android USB 设备如何区分是打印机还是U盘](http://blog.csdn.net/rodulf/article/details/51916998)
 
@@ -8,3 +8,8 @@
 - 2.Android Vold
 
     - [Android vold 工作流程分析](http://blog.csdn.net/kehyuanyu/article/details/47131547)
+    - [Android Vold 架构简析](http://blog.csdn.net/kartorz/article/details/51554214)
+    
+    - [Android SDCard Mount 流程分析（一）](https://www.cnblogs.com/TerryBlog/archive/2012/04/05/2432818.html)
+    - [android usb挂载分析----vold启动](http://blog.csdn.net/new_abc/article/details/7396733)
+
