--- a/0004.待处理的网址集合.md
+++ b/0004.待处理的网址集合.md
@@ -13,3 +13,11 @@
     - [Android SDCard Mount 流程分析（一）](https://www.cnblogs.com/TerryBlog/archive/2012/04/05/2432818.html)
     - [android usb挂载分析----vold启动](http://blog.csdn.net/new_abc/article/details/7396733)
 
+- 3.IPU
+
+    - [IPU概述](http://blog.csdn.net/yanbixing123/article/details/52290933)
+
+- 4.uboot(SYS_USE_SPINOR)
+
+    - [天嵌TQ_E9卡片电脑移植飞思卡尔yocto L4.1.15_1.0.0_ga 第二篇 新版uboot移植](http://blog.csdn.net/zxr1521904712/article/details/51379578)
+
