--- a/0004.待处理的网址集合.md
+++ b/0004.待处理的网址集合.md
@@ -9,9 +9,14 @@
 
     - [Android vold 工作流程分析](http://blog.csdn.net/kehyuanyu/article/details/47131547)
     - [Android Vold 架构简析](http://blog.csdn.net/kartorz/article/details/51554214)
+    - [Android 存储系统之架构篇](http://www.offcn.com/it/2016/1226/5459.html)
     
     - [Android SDCard Mount 流程分析（一）](https://www.cnblogs.com/TerryBlog/archive/2012/04/05/2432818.html)
     - [android usb挂载分析----vold启动](http://blog.csdn.net/new_abc/article/details/7396733)
+    
+    - [Android6.0 otg插入U盘 流程](http://blog.csdn.net/kc58236582/article/details/50577333)
+    - [在Android6.0上给外置SD卡增加一个路径](http://blog.csdn.net/kc58236582/article/details/50536882)
+    - [【usb存储挂载】android6.0固定usb存储挂载路径](http://blog.csdn.net/smilefyx/article/details/78846292)
 
 - 3.IPU
 
