--- a/0004.待处理的网址集合.md
+++ b/0004.待处理的网址集合.md
@@ -26,3 +26,7 @@
 
     - [天嵌TQ_E9卡片电脑移植飞思卡尔yocto L4.1.15_1.0.0_ga 第二篇 新版uboot移植](http://blog.csdn.net/zxr1521904712/article/details/51379578)
 
+- 5.GPIO
+
+    - [Linux下用文件IO的方式操作GPIO（/sys/class/gpio）](http://blog.csdn.net/wangweiqiang1325/article/details/52209539)
+    
