--- a/0004.待处理的网址集合.md
+++ b/0004.待处理的网址集合.md
@@ -30,3 +30,16 @@
 
     - [Linux下用文件IO的方式操作GPIO（/sys/class/gpio）](http://blog.csdn.net/wangweiqiang1325/article/details/52209539)
     
+- 6.USB
+    - [Android USB 设备如何区分是打印机还是U盘](http://blog.csdn.net/rodulf/article/details/51916998)
+    - [USB class总结](http://blog.csdn.net/luckywang1103/article/details/12676381)
+    - [usb设备类（class）规范](http://blog.sina.com.cn/s/blog_604a480b0102wcve.html)
+    - [USB Device Class 详解](https://wenku.baidu.com/view/890d5c14fad6195f302ba606.html)
+    - [Android 获取USB设备的类型](http://blog.csdn.net/u013686019/article/details/50409421)
+    - [USB HID协议中几个关键概念的理解](http://blog.csdn.net/coroutines/article/details/45044077)
+    - [USB HID介绍](https://wenku.baidu.com/view/c6008e7679563c1ec4da7132.html)
+
+
+[Hi, This is CarPlay!](http://blog.csdn.net/coroutines/article/details/45057061)
+[MTP协议开发入门](http://blog.csdn.net/coroutines/article/details/44341417)
+
