--- a/0004.待处理的网址集合.md
+++ b/0004.待处理的网址集合.md
@@ -39,7 +39,18 @@
     - [USB HID协议中几个关键概念的理解](http://blog.csdn.net/coroutines/article/details/45044077)
     - [USB HID介绍](https://wenku.baidu.com/view/c6008e7679563c1ec4da7132.html)
 
+- 7.开机提示Android正在升级
+    - [开机提示“Android正在升级...”](http://blog.csdn.net/hp0773/article/details/42143409)
+    - [将"android正在升级"改成"android正在启动"](http://blog.csdn.net/jtzp007/article/details/59484214)
+    - [L版本开机提示“Android正在升级或启动”](http://blog.csdn.net/xiaoyg830/article/details/48175419)
 
 [Hi, This is CarPlay!](http://blog.csdn.net/coroutines/article/details/45057061)
 [MTP协议开发入门](http://blog.csdn.net/coroutines/article/details/44341417)
+
+- [android抓取各种log的方法](http://blog.csdn.net/skykingf/article/details/50600439)
+- [Android7.0 启动Launcher流程](http://blog.csdn.net/fu_kevin0606/article/details/54931704)
+- [Android A/B System OTA分析（四）系统的启动和升级](http://blog.csdn.net/guyongqiangx/article/details/72604355)
+- [android 5.1.1开机优化(framework层)](http://blog.csdn.net/xxm282828/article/details/49095839)
+- [修改Android系统源代码，优化开机速度](http://blog.csdn.net/xxm282828/article/details/43066923)
+
 
