--- a/0004.待处理的网址集合.md
+++ b/0004.待处理的网址集合.md
@@ -48,6 +48,11 @@
 [MTP协议开发入门](http://blog.csdn.net/coroutines/article/details/44341417)
 
 - [android抓取各种log的方法](http://blog.csdn.net/skykingf/article/details/50600439)
+- [Android如何捕获应用的crash信息](http://blog.csdn.net/fishle123/article/details/50823358)
+- [android开发之应用Crash自动抓取Log_自动保存崩溃日志到本地](http://blog.csdn.net/jason0539/article/details/45602655)
+- [[整理]Android测试日志文件抓取与分析](http://blog.csdn.net/ameyume/article/details/7667574)
+- [一种通过自动脚本抓取Android 手机log的方法](http://blog.csdn.net/maetelibom/article/details/51480980)
+
 - [Android7.0 启动Launcher流程](http://blog.csdn.net/fu_kevin0606/article/details/54931704)
 - [Android A/B System OTA分析（四）系统的启动和升级](http://blog.csdn.net/guyongqiangx/article/details/72604355)
 - [android 5.1.1开机优化(framework层)](http://blog.csdn.net/xxm282828/article/details/49095839)
