增加《Android系统优化》部分

--- a/0004.待处理的网址集合.md
+++ b/0004.待处理的网址集合.md
@@ -44,6 +44,19 @@
     - [将"android正在升级"改成"android正在启动"](http://blog.csdn.net/jtzp007/article/details/59484214)
     - [L版本开机提示“Android正在升级或启动”](http://blog.csdn.net/xiaoyg830/article/details/48175419)
 
+- 8.开机优化
+    - [Android7.0 启动Launcher流程](http://blog.csdn.net/fu_kevin0606/article/details/54931704)
+    - [Android A/B System OTA分析（四）系统的启动和升级](http://blog.csdn.net/guyongqiangx/article/details/72604355)
+    - [android 5.1.1开机优化(framework层)](http://blog.csdn.net/xxm282828/article/details/49095839)
+    - [修改Android系统源代码，优化开机速度](http://blog.csdn.net/xxm282828/article/details/43066923)
+    
+    - [Android系统优化-系列](http://blog.csdn.net/u010164190/article/category/6227777)
+        - [Android开机时间分析 ](http://blog.csdn.net/u010164190/article/details/51915458)
+        - [浅谈Android开机启动速度优化（含应用程序启动速度优化）](http://blog.csdn.net/jackyu613/article/details/6044297)
+        - [Android 开机速度优化-----ART 预先优化](http://blog.csdn.net/u010164190/article/details/51463492)
+
+
+
 [Hi, This is CarPlay!](http://blog.csdn.net/coroutines/article/details/45057061)
 [MTP协议开发入门](http://blog.csdn.net/coroutines/article/details/44341417)
 
@@ -53,9 +66,5 @@
 - [[整理]Android测试日志文件抓取与分析](http://blog.csdn.net/ameyume/article/details/7667574)
 - [一种通过自动脚本抓取Android 手机log的方法](http://blog.csdn.net/maetelibom/article/details/51480980)
 
-- [Android7.0 启动Launcher流程](http://blog.csdn.net/fu_kevin0606/article/details/54931704)
-- [Android A/B System OTA分析（四）系统的启动和升级](http://blog.csdn.net/guyongqiangx/article/details/72604355)
-- [android 5.1.1开机优化(framework层)](http://blog.csdn.net/xxm282828/article/details/49095839)
-- [修改Android系统源代码，优化开机速度](http://blog.csdn.net/xxm282828/article/details/43066923)
 
 
