--- a/0004.待处理的网址集合.md
+++ b/0004.待处理的网址集合.md
@@ -57,8 +57,9 @@
 
 
 
-[Hi, This is CarPlay!](http://blog.csdn.net/coroutines/article/details/45057061)
-[MTP协议开发入门](http://blog.csdn.net/coroutines/article/details/44341417)
+- [Hi, This is CarPlay!](http://blog.csdn.net/coroutines/article/details/45057061)
+- [MTP协议开发入门](http://blog.csdn.net/coroutines/article/details/44341417)
+- [Android系统启动过程-uBoot+Kernel+Android](https://www.cnblogs.com/pngcui/p/4665106.html)
 
 - [android抓取各种log的方法](http://blog.csdn.net/skykingf/article/details/50600439)
 - [Android如何捕获应用的crash信息](http://blog.csdn.net/fishle123/article/details/50823358)
