--- a/0004.待处理的网址集合.md
+++ b/0004.待处理的网址集合.md
@@ -67,5 +67,8 @@
 - [[整理]Android测试日志文件抓取与分析](http://blog.csdn.net/ameyume/article/details/7667574)
 - [一种通过自动脚本抓取Android 手机log的方法](http://blog.csdn.net/maetelibom/article/details/51480980)
 
+- [如何分析ANR Log的总结](https://www.jianshu.com/p/8964812972be)
+- [Android框架分析系列之Android traces.txt文件](https://www.2cto.com/kf/201610/560474.html)
+- [从源码角度看traces.txt是如何生成的](https://juejin.im/post/59ac2b3ff265da24777a11f5)
 
 
