--- a/0004.待处理的网址集合.md
+++ b/0004.待处理的网址集合.md
@@ -38,6 +38,9 @@
     - [Android 获取USB设备的类型](http://blog.csdn.net/u013686019/article/details/50409421)
     - [USB HID协议中几个关键概念的理解](http://blog.csdn.net/coroutines/article/details/45044077)
     - [USB HID介绍](https://wenku.baidu.com/view/c6008e7679563c1ec4da7132.html)
+    
+    - [解决Linux下USB连接android手机](http://blog.csdn.net/blogxiaofei/article/details/7418079)
+    - [usb-host一步一步学（一）安卓在usb-host模式下列出当前连接的usb设备](https://www.cnblogs.com/sowhat4999/p/4439873.html)
 
 - 7.开机提示Android正在升级
     - [开机提示“Android正在升级...”](http://blog.csdn.net/hp0773/article/details/42143409)
