--- a/0004.待处理的网址集合.md
+++ b/0004.待处理的网址集合.md
@@ -1,11 +1,11 @@
 
-- 1.获取usb设备类型(anInterface.getInterfaceClass)
+- 01.获取usb设备类型(anInterface.getInterfaceClass)
 
     - [Android USB 设备如何区分是打印机还是U盘](http://blog.csdn.net/rodulf/article/details/51916998)
 
     - [Android 获取USB设备的类型](http://blog.csdn.net/u013686019/article/details/50409421)
 
-- 2.Android Vold
+- 02.Android Vold
 
     - [Android vold 工作流程分析](http://blog.csdn.net/kehyuanyu/article/details/47131547)
     - [Android Vold 架构简析](http://blog.csdn.net/kartorz/article/details/51554214)
@@ -18,19 +18,19 @@
     - [在Android6.0上给外置SD卡增加一个路径](http://blog.csdn.net/kc58236582/article/details/50536882)
     - [【usb存储挂载】android6.0固定usb存储挂载路径](http://blog.csdn.net/smilefyx/article/details/78846292)
 
-- 3.IPU
+- 03.IPU
 
     - [IPU概述](http://blog.csdn.net/yanbixing123/article/details/52290933)
 
-- 4.uboot(SYS_USE_SPINOR)
+- 04.uboot(SYS_USE_SPINOR)
 
     - [天嵌TQ_E9卡片电脑移植飞思卡尔yocto L4.1.15_1.0.0_ga 第二篇 新版uboot移植](http://blog.csdn.net/zxr1521904712/article/details/51379578)
 
-- 5.GPIO
+- 05.GPIO
 
     - [Linux下用文件IO的方式操作GPIO（/sys/class/gpio）](http://blog.csdn.net/wangweiqiang1325/article/details/52209539)
     
-- 6.USB
+- 06.USB
     - [Android USB 设备如何区分是打印机还是U盘](http://blog.csdn.net/rodulf/article/details/51916998)
     - [USB class总结](http://blog.csdn.net/luckywang1103/article/details/12676381)
     - [usb设备类（class）规范](http://blog.sina.com.cn/s/blog_604a480b0102wcve.html)
@@ -42,12 +42,12 @@
     - [解决Linux下USB连接android手机](http://blog.csdn.net/blogxiaofei/article/details/7418079)
     - [usb-host一步一步学（一）安卓在usb-host模式下列出当前连接的usb设备](https://www.cnblogs.com/sowhat4999/p/4439873.html)
 
-- 7.开机提示Android正在升级
+- 07.开机提示Android正在升级
     - [开机提示“Android正在升级...”](http://blog.csdn.net/hp0773/article/details/42143409)
     - [将"android正在升级"改成"android正在启动"](http://blog.csdn.net/jtzp007/article/details/59484214)
     - [L版本开机提示“Android正在升级或启动”](http://blog.csdn.net/xiaoyg830/article/details/48175419)
 
-- 8.开机优化
+- 08.开机优化
     - [Android7.0 启动Launcher流程](http://blog.csdn.net/fu_kevin0606/article/details/54931704)
     - [Android A/B System OTA分析（四）系统的启动和升级](http://blog.csdn.net/guyongqiangx/article/details/72604355)
     - [android 5.1.1开机优化(framework层)](http://blog.csdn.net/xxm282828/article/details/49095839)
@@ -57,8 +57,20 @@
         - [Android开机时间分析 ](http://blog.csdn.net/u010164190/article/details/51915458)
         - [浅谈Android开机启动速度优化（含应用程序启动速度优化）](http://blog.csdn.net/jackyu613/article/details/6044297)
         - [Android 开机速度优化-----ART 预先优化](http://blog.csdn.net/u010164190/article/details/51463492)
+- 09.AndroidDevTools
+    - [AndroidDevTools](http://www.androiddevtools.cn)
 
-
+- 10.Wifi
+    - [Wpa Supplicant Crashing while disconnect from connected Access Point](https://community.nxp.com/message/908702#)
+    - [libnl开源库](https://book.2cto.com/201405/43291.html)
+    - [Wireless driver bcmdhd hangs when deactivating network interface (Bug #273) ](http://issues.webos-ports.org/issues/273)
+    - [全志A33平台调通AP6181（分色排版）](http://blog.csdn.net/wb4916/article/details/73610827)
+    - [imx6q bcm43341wifi移植问题](http://www.nxpic.org/module/forum/thread-606356-1-1.html)
+    
+- 11.DDR
+    - [i.MX6 DDR Stress Test Tool V1.0.3](https://community.nxp.com/docs/DOC-96412)
+    - [i.MX6/7 DDR Stress Test Tool V2.80](https://community.nxp.com/docs/DOC-105652)
+    - [Using Open Source Debugging Tools for Linux on i.MX Processors](https://www.nxp.com/docs/en/application-note/AN4553.pdf)
 
 - [Hi, This is CarPlay!](http://blog.csdn.net/coroutines/article/details/45057061)
 - [MTP协议开发入门](http://blog.csdn.net/coroutines/article/details/44341417)
@@ -73,5 +85,16 @@
 - [如何分析ANR Log的总结](https://www.jianshu.com/p/8964812972be)
 - [Android框架分析系列之Android traces.txt文件](https://www.2cto.com/kf/201610/560474.html)
 - [从源码角度看traces.txt是如何生成的](https://juejin.im/post/59ac2b3ff265da24777a11f5)
+
+- [CPU frequency scaling](https://wiki.archlinux.org/index.php/CPU_frequency_scaling_(%E7%AE%80%E4%BD%93%E4%B8%AD%E6%96%87))
+- [Linux系统CPU频率调整工具使用](https://www.cnblogs.com/276815076/p/5434295.html)
+
+- [Android Tombstone 分析](https://www.cnblogs.com/CoderTian/p/5980426.html)
+
+- [Ubuntu下Android NDK的安装及配置](http://blog.csdn.net/davebobo/article/details/52446986)
+- [ubuntu 64bit主机下面安装android的NDK开发环境](http://blog.csdn.net/weicaijiang/article/details/54585540)
+
+
+- [i.MX6 USB OTG mode switching without ID pin](https://community.nxp.com/thread/318157)
 
 
