--- a/0004.待处理的网址集合.md
+++ b/0004.待处理的网址集合.md
@@ -71,6 +71,15 @@
     - [i.MX6 DDR Stress Test Tool V1.0.3](https://community.nxp.com/docs/DOC-96412)
     - [i.MX6/7 DDR Stress Test Tool V2.80](https://community.nxp.com/docs/DOC-105652)
     - [Using Open Source Debugging Tools for Linux on i.MX Processors](https://www.nxp.com/docs/en/application-note/AN4553.pdf)
+    
+    - [i.MX6 DDR 参数设置](http://blog.csdn.net/yixuaning/article/details/43236129)
+    - [DDR3内存更换调试总结](http://blog.csdn.net/wxf_126/article/details/7914280)
+    - [IMX6Q的DDR3初始化配置](http://blog.csdn.net/qq405180763/article/details/44977449)
+    - [U-Boot移植_DDR3移植](http://blog.csdn.net/u010346967/article/details/46551373)
+    
+    - [通过uboot降cpu，DDR频率测试](http://blog.csdn.net/yihui8/article/details/6978071)
+    - [[IMX6DL][Android4.4] CPU频率调节模式以及降频方法 ](http://blog.csdn.net/kris_fei/article/details/51822435)
+        > Fresscale imx6 系列文章
 
 - [Hi, This is CarPlay!](http://blog.csdn.net/coroutines/article/details/45057061)
 - [MTP协议开发入门](http://blog.csdn.net/coroutines/article/details/44341417)
@@ -97,4 +106,8 @@
 
 - [i.MX6 USB OTG mode switching without ID pin](https://community.nxp.com/thread/318157)
 
+
+- [【Android】通过adb shell命令查看内存，CPU，启动时间，电量等信息 ](http://blog.csdn.net/zouxiongqqq/article/details/50658486)
+- [ [RK3288][Android6.0] 调试笔记 --- 让cpu占用率达到100% ](http://blog.csdn.net/kris_fei/article/details/77196826)
+    > 有RK3288系列笔记记录
 
