--- a/0004.待处理的网址集合.md
+++ b/0004.待处理的网址集合.md
@@ -54,9 +54,16 @@
     - [修改Android系统源代码，优化开机速度](http://blog.csdn.net/xxm282828/article/details/43066923)
     
     - [Android系统优化-系列](http://blog.csdn.net/u010164190/article/category/6227777)
+        - [Android 开机优化](http://blog.csdn.net/azhengye/article/details/69831590?locationNum=6&fps=1)
         - [Android开机时间分析 ](http://blog.csdn.net/u010164190/article/details/51915458)
         - [浅谈Android开机启动速度优化（含应用程序启动速度优化）](http://blog.csdn.net/jackyu613/article/details/6044297)
         - [Android 开机速度优化-----ART 预先优化](http://blog.csdn.net/u010164190/article/details/51463492)
+        - [Android内核解读-Android系统的开机启动过程](http://blog.csdn.net/lostinai/article/details/48264439)
+        - [Android性能分析（MTK）](http://blog.csdn.net/huangyabin001/article/category/2625587)
+            > MTK系列文章
+        - [Android 开机动画流程](http://blog.csdn.net/snail_coder/article/details/51635728)
+        - [Android Performance](http://blog.csdn.net/column/details/15030.html)
+            > 专注Android性能优化，包括脚本工具的运用与开发。整机／APP的性能优化。
 - 09.AndroidDevTools
     - [AndroidDevTools](http://www.androiddevtools.cn)
 
