--- a/0003.有趣的网址记录.md
+++ b/0003.有趣的网址记录.md
@@ -3,3 +3,15 @@
 [泡在网上的日子 - 做最好的移动开发社区](http://www.jcodecraeer.com)
 - 一个有关Android开发、iOS开发的网站,分享知识与技术。
 > 网站主要是关于web开发以及android开发两方面的资料，目前更侧重于android开发，并新增了开源代码下载模块，如果你对安卓开发感兴趣，可以加入我的qq群
+
+[泰晓科技 - 聚焦嵌入式 Linux](http://tinylab.org/)
+- 泰晓科技 - 聚焦嵌入式 Linux - 追本溯源，见微知著！
+> Linux Engineer 一枚，重度开源践行者，兰州大学开源社区初创成员，Linux 官方社区华人贡献者前 50，目前专注于 Linux Kernel Features 方向，希望在相关领域跟具体产品结合起来，有比较系统化地研究，致力于创造更优秀的 Linux 产品。
+
+[Cloud Lab: 泰晓实验云台](http://tinylab.org/cloud-lab/)
+> 可快速构建的计算机课程在线实验平台
+
+[魅族内核团队的官方博客](http://kernel.meizu.com/)
+> 魅族内核团队由一群具有工匠精神的 Linux 内核开发人员组成，持续致力于打造更好用的智能手机。团队大多数成员都在嵌入式 Linux 领域有多年的产品开发实践，或精耕于某个模块或某个子系统，或深入研究过某些内核特性，或在小范围默默钻研，或活跃于某些技术沙龙与社区。
+
+  - [Linux Thermal 框架解析](http://kernel.meizu.com/linux-thermal-framework-intro.html)
