--- a/0004.待处理的网址集合.md
+++ b/0004.待处理的网址集合.md
@@ -21,6 +21,8 @@
 - 03.IPU
 
     - [IPU概述](http://blog.csdn.net/yanbixing123/article/details/52290933)
+    - [i.MX6-IPU子系统](http://blog.csdn.net/column/details/ipu-analysis-for-imx.html)
+    > 针对恩智浦NXP(原飞思卡尔)i.MX6系列的IPU子系统部分进行源代码级分析.内核版本3.14.52.
 
 - 04.uboot(SYS_USE_SPINOR)
 
@@ -117,4 +119,7 @@
 - [【Android】通过adb shell命令查看内存，CPU，启动时间，电量等信息 ](http://blog.csdn.net/zouxiongqqq/article/details/50658486)
 - [ [RK3288][Android6.0] 调试笔记 --- 让cpu占用率达到100% ](http://blog.csdn.net/kris_fei/article/details/77196826)
     > 有RK3288系列笔记记录
+
+[ IMX6 长时间播放1080P 中途停止 ](http://blog.csdn.net/u012587637/article/details/38701725)
+[双缓冲 framebuffer 切换](http://blog.csdn.net/molibaobei90/article/details/40826791)
 
