--- a/0004.待处理的网址集合.md
+++ b/0004.待处理的网址集合.md
@@ -120,5 +120,5 @@
 - [ [RK3288][Android6.0] 调试笔记 --- 让cpu占用率达到100% ](http://blog.csdn.net/kris_fei/article/details/77196826)
     > 有RK3288系列笔记记录
 
-[ IMX6 长时间播放1080P 中途停止 ](http://blog.csdn.net/u012587637/article/details/38701725)
-[双缓冲 framebuffer 切换](http://blog.csdn.net/molibaobei90/article/details/40826791)
+- [ IMX6 长时间播放1080P 中途停止 ](http://blog.csdn.net/u012587637/article/details/38701725)
+- [双缓冲 framebuffer 切换](http://blog.csdn.net/molibaobei90/article/details/40826791)
