--- a/0004.待处理的网址集合.md
+++ b/0004.待处理的网址集合.md
@@ -122,3 +122,29 @@
 
 - [ IMX6 长时间播放1080P 中途停止 ](http://blog.csdn.net/u012587637/article/details/38701725)
 - [双缓冲 framebuffer 切换](http://blog.csdn.net/molibaobei90/article/details/40826791)
+
+
+
+
+
+[通过verifier_test工具检验安卓升级包的完整性和合法性](http://blog.csdn.net/edw200/article/details/52180129)
+
+- [android没有告诉你的usr模式和eng模式的区别](http://blog.csdn.net/allon19/article/details/42029193)
+- [Android USER 版本与ENG 版本的差异--MTK官方解释](http://blog.csdn.net/g19920917/article/details/16855589)
+
+- [Android 4.4 eng版本 红框问题](http://blog.csdn.net/Harith/article/details/46709961)
+- [去掉Android屏幕四周闪现红框](http://blog.csdn.net/u014159143/article/details/73131188)
+- [[I.MX6Q][Android6.0.1_r3]之eng模式下屏幕四周红框显示问题](http://blog.csdn.net/leavestrong/article/details/52438803)
+- [[IMX6Q][Android6.0.1_r3]之系统屏幕显示默认设置更改](http://blog.csdn.net/leavestrong/article/details/51895218)
+- [Android ramdisk.img 分析、解压和压缩](http://blog.csdn.net/allon19/article/details/37818905)
+
+
+- [Android 获取ROOT权限原理解析](http://blog.csdn.net/chaihuasong/article/details/8463212)
+- [Android 6.0 如何默认打开user版本的root权限](http://blog.csdn.net/wangjicong_215/article/details/77601638)
+
+
+- [老罗的Android之旅](http://blog.csdn.net/Luoshengyang/)
+
+- [wangjicong_215的博客](http://blog.csdn.net/wangjicong_215/article/category/6361274)
+    - [Android 测试CTS,GTS目录及脚本整理](http://blog.csdn.net/wangjicong_215/article/details/75066082)
+
