加入ipu相关内容

--- a/0004.待处理的网址集合.md
+++ b/0004.待处理的网址集合.md
@@ -22,6 +22,9 @@
 
     - [IPU概述](http://blog.csdn.net/yanbixing123/article/details/52290933)
     - [i.MX6-IPU子系统](http://blog.csdn.net/column/details/ipu-analysis-for-imx.html)
+    - [Freescale MX51/MX6Q平台的透明处理](https://blog.csdn.net/jack_a8/article/details/42915579)
+    - [IPU显示总结文档](http://www.doc88.com/p-9169772659143.html)
+    - [imx6.ipu集合](https://so.csdn.net/so/search/s.do?q=imx6.ipu&t=blog)
     > 针对恩智浦NXP(原飞思卡尔)i.MX6系列的IPU子系统部分进行源代码级分析.内核版本3.14.52.
 
 - 04.uboot(SYS_USE_SPINOR)
@@ -89,6 +92,16 @@
     - [通过uboot降cpu，DDR频率测试](http://blog.csdn.net/yihui8/article/details/6978071)
     - [[IMX6DL][Android4.4] CPU频率调节模式以及降频方法 ](http://blog.csdn.net/kris_fei/article/details/51822435)
         > Fresscale imx6 系列文章
+- 12.语音
+    - [基于IMX6Q的XFM10621六麦驱动实现说明](https://blog.csdn.net/task_struct/article/details/78643233)
+    - [科大讯飞板子换唤醒词方法（含win10可用adb工具）](https://blog.csdn.net/zmdsjtu/article/details/52833551)
+    - [科大讯飞麦克风阵列使用感受（六麦，XFM10621）](https://blog.csdn.net/zmdsjtu/article/details/52816692)
+    - [麦克风阵列技术入门（1）](https://blog.csdn.net/liyuanbhu/article/details/22661391)
+    - [麦克风阵列技术入门（2）](https://blog.csdn.net/liyuanbhu/article/details/22661757)
+    - [麦克风阵列技术入门（3）](https://blog.csdn.net/liyuanbhu/article/details/41077419)
+    - [麦克风阵列声源定位实现](https://blog.csdn.net/narytowzy/article/details/46771215)
+    
+    > [科大讯飞麦克风集合](https://so.csdn.net/so/search/s.do?q=%E7%A7%91%E5%A4%A7%E8%AE%AF%E9%A3%9E%E9%BA%A6%E5%85%8B%E9%A3%8E&t=blog)
 
 - [Hi, This is CarPlay!](http://blog.csdn.net/coroutines/article/details/45057061)
 - [MTP协议开发入门](http://blog.csdn.net/coroutines/article/details/44341417)
