增加IPU总结笔记
Add 《IPU总结笔记 》

--- a/0005.IPU相关研究.md
+++ b/0005.IPU相关研究.md
@@ -3,12 +3,15 @@
 - [IPU概述](https://blog.csdn.net/yanbixing123/article/details/52290933)
 > imx6q整体系统框架图/代码框架文件
 > 加精推荐优先学习
+> 嵌入式uboot，linux驱动，Andorid底层。 i.MX6 IPU专栏，GStreamer专栏
+	- [ i.MX6Q---IPU总结笔记 ](https://blog.csdn.net/yanbixing123/article/category/6380610)
 
 !(https://img-blog.csdn.net/20160823150153119?watermark/2/text/aHR0cDovL2Jsb2cuY3Nkbi5uZXQv/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70/gravity/Center)
 
 	- [4.1 ipu_common.c分析---入口函数及probe函数分析](https://blog.csdn.net/yanbixing123/article/details/52292056)
 	- [4.2 ipu_init_channel函数的详细分析])(https://blog.csdn.net/yanbixing123/article/details/52292543)
 	- [7.1 ipu_device.c分析（一）---流程分析](https://blog.csdn.net/yanbixing123/article/details/52296506)
+	- [8.5 子模块分析之VDIC](https://blog.csdn.net/yanbixing123/article/details/52299322)
 
 - [IPU到底是个什么鬼？](https://blog.csdn.net/woyimibayi/article/details/78422296)
 
