增加设备树pinctrl解析

--- a/0004.待处理的网址集合.md
+++ b/0004.待处理的网址集合.md
@@ -161,3 +161,4 @@
 - [wangjicong_215的博客](http://blog.csdn.net/wangjicong_215/article/category/6361274)
     - [Android 测试CTS,GTS目录及脚本整理](http://blog.csdn.net/wangjicong_215/article/details/75066082)
 
+- [imx6设备树(dts)pinctrl解析](https://blog.csdn.net/gaoguoxin2/article/details/53340350)
